--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "DAD"
+name = "archive-wasm"
 version = "0.1.0"
 authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
 edition = "2018"
